tools/crates/vendor/toml_edit/tests/fixtures/invalid/integer/invalid-hex-2.stderr
TOML parse error at line 1, column 19
  |
1 | invalid-hex-2 = 0xgabba00f1
  |                   ^
invalid hexadecimal integer
